--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "karma-spec-reporter": "^0.0.36",
+    "ngentest": "^1.4.4",
     "typescript": "~4.7.2"
   }
 }
